public/css/style.css
html {
}

body {
  background-color: orange;
  background-image: url('./images/yellownew.jpg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vh;
  /*background-color: rgba(217, 162, 0);*/
  margin: 0 auto;
  font-family: 'Nunito', sans-serif;
}

h1 {
  display: absolute;
  font-size: 400%;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: 'Fredericka the Great', cursive;
}

.taglineKennyContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  /*margin-top: 2%;*/
  margin-left: 5%;
  margin-right: 5%;
  color: #260C1A;
}

.h2Intro2ndLine {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 80%;
}

.taglineKennyContainer h2 {
  margin: 0.3%;
}

#hello {
  font-size: 130%;
  color: #AA302B;
}

#kenny {
  width: auto;
  height: 60px;
}

h2 {
  font-size: 190%;
  font-family: 'Fredericka the Great', cursive;
}


.homepageText {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 2%;
  margin-bottom: 3%;
  font-size: 110%;
  color: #1E1E24;
  margin-left: 7%;
  margin-right: 8%;
}

.homepageText p {
    margin: 0.3%;
}

.logoname {
  font-family: 'Fredericka the Great', cursive;
}

.bc {
  position: relative;
  margin-left: 0;
  width: 100%;
  height: 100px;
}

.homeBtnContainer {
  position: absolute;
  text-align: center;
  margin: 0 auto;
  width: 1000px;
}

#viewallbtn {
  width: 300px;
}

.hoverGhostButton {
  /*position: absolute;*/
  color: #f5f5f5;
  border: 1px solid #f5f5f5;
  border-radius: 5px;
  display: inline-block;
  width: 200px;
  padding: 8px;
  margin: 10px;
  font-size: 2em;
  text-align: center;
  text-decoration: none;
  -webkit-transition: color 0.3s ease-out, background-color 0.3s ease-out;
  transition: color 0.3s ease-out, background-color 0.3s ease-out;
}

.hoverGhostButton:hover, .hoverGhostButton:focus {
  background-color: #f5f5f5;
  color: #000;
  -webkit-transition: color 0.3s ease-in, background-color 0.3s ease-in;
  transition: color 0.3s ease-in, background-color 0.3s ease-in;
}

.flashmsg {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: #AA302B;
}

/*ViewAllEvents*/

.viewAllEvents {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#searchBar {
  margin: 5%;
}

input {
  margin-top: 6px;
  height: 50px;
  width: 180px;
  top: 100px;
  border: 0;
  outline: 0;
  background-color: rgba(54, 25, 25, .00004);
  border-bottom: 1px solid black;
  text-align: center;
  color: #260C1A;
  font-family: 'Bad Script', cursive;
}

.eventList {
  width: 300px;
  padding: 3%;
  border-radius: 2px;
  background: rgba(215, 217, 206, 0.2);
  vertical-align: center;
  font-size: 110%;
  font-family: 'Coming Soon', cursive;
}

.tableBtns {
  /*position: absolute;*/
  background: transparent;
  color: #f5f5f5;
  border: 1px solid #f5f5f5;
  border-radius: 5px;
  display: inline-block;
  width: 60px;
  padding: 1px;
  margin: 1px;
  text-align: center;
  text-decoration: none;
  -webkit-transition: color 0.3s ease-out, background-color 0.3s ease-out;
  transition: color 0.3s ease-out, background-color 0.3s ease-out;
}

.tableBtns:hover, .tableBtns:focus {
  background-color: #f5f5f5;
  color: #000;
  -webkit-transition: color 0.3s ease-in, background-color 0.3s ease-in;
  transition: color 0.3s ease-in, background-color 0.3s ease-in;
}

/*CSS FOR SIGN UP PAGE*/

#contact-form {
  max-width: 90%;
  margin: 0 auto;
}

label {
  font-weight: 400;
  cursor: pointer;
}

textarea,
input {
  border: none;
  outline: none;
  border-radius: 0;
  text-align: center;
  background: none;
  font-weight: 700;
  font-family: 'Lato', georgia;
  font-size: 25px;
  color: rgba(255, 255, 255, 1);
  max-width: 90%;
  padding: 1rem;
  border: 2px dashed rgba(255, 255, 255, 0);
  box-sizing: border-box;
  cursor: text;
}

textarea {
  text-align: left;
  /* overflow:hidden; */

  resize: none;
  width: 90%;
  border-color: rgba(255, 255, 255, 0)
}

textarea:focus {
  background-color: rgba(255, 255, 255, 0.2);
  border: 2px dashed rgba(255, 255, 255, 1);
}

textarea:focus:required:valid {
  border: 2px solid rgba(255, 255, 255, 0);
  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
}

textarea:required:valid {
  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
}

input {
  border-bottom: 2px dashed rgba(255, 255, 255, 0.5);
}

input:required,
textarea:required {
  border-bottom: 2px dashed rgba(255, 255, 255, 0.5);
}

input:focus {
  border-bottom: 2px dashed rgba(255, 255, 255, 1);
  background-color: rgba(255, 255, 255, 0.2);
}

input:required:valid {
  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
}

input:required:invalid {
  color: rgba(255, 255, 255, 0.5);
}

::-webkit-input-placeholder {
  text-align: center;
  color: rgba(255, 255, 255, 0.4);
  font-style: italic;
  font-weight: 400;
}

:-moz-placeholder {
  /* Firefox 18- */

  text-align: center;
  color: rgba(255, 255, 255, 0.4);
  font-style: italic;
  font-weight: 400;
}

::-moz-placeholder {
  /* Firefox 19+ */

  text-align: center;
  color: rgba(255, 255, 255, 0.4);
  font-style: italic;
  font-weight: 400;
}

:-ms-input-placeholder {
  text-align: center;
  color: rgba(255, 255, 255, 0.4);
  font-style: italic;
  font-weight: 400;
}

.expanding {
  vertical-align: top;
}

.send-icn {
  fill: rgba(255, 255, 255, 1)
}

.send-icn:hover {
  fill: rgba(0, 0, 0, 1);
  cursor: pointer;
}

button {
  background: none;
  border: none;
  outline: none;
  margin: 2vmax;
}

button:hover small {
  opacity: 1;
}

small {
  display: block;
  opacity: 0;
}

.website {
  opacity: 1;
  font-size: 16px;
  color: white;
  position: relative;
  text-align: center;
  display: block;
  margin-top: 7%;

}

.website a {
  color: white;
}

footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 30px;
  background-color: transparent;
  color: black;
  font-size: 90%;
}

